@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.16 version.
 
 0.05 2015-01-08T19:56:30+01:00
  - Add basic tests for die rewrited to err().
